fix : quiz game with new controller
